# py-hexdump

./: README.md  pyproject.toml
src/py_hexdump/: __init__.py  __main__.py
tests/: test_module.py
tests/test_files/: test.txt
