[project]
name = "py-hexdump"
version = "0.1.0"
description = "A clone of the hexdump utility written in Python."
readme = "README.md"
authors = [
    { name = "Matthew Cane"}
]
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.7.1",
    "tabulate>=0.9.0",
]

[project.scripts]
py-hexdump = "py_hexdump:main"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
